classDiagram
    direction TB

    class Game {
        +int GOLD_TARGET$
        -Scanner in
        -CommandParser parser
        -ChannelMap map
        -PlayerShip player
        -Encounter encounter
        -Random random
        -boolean running
        -boolean confirmingQuit
        +Game(Scanner in, ChannelMap map, Random random)
        +main(String[] args)$ void
        +run() void
        -show(String reply)$ void
        +dispatch(Command command) String
        -sail(String name) String
        -buy(Command command) String
        -retire() String
        -outcome() String
        -end(String how) String
        +isRunning() boolean
        +getPlayer() PlayerShip
        +getEncounter() Encounter
    }

    class CommandParser {
        -HashMap~String, String~ templates
        +CommandParser()
        +parse(String line) Command
        +isVerb(String word) boolean
        +templateOf(String verb) String
        +allTemplates() String
        +parseCount(String text)$ int
    }

    class Command {
        -String verb
        -String argument
        +Command(String verb, String argument)
        +getVerb() String
        +getArgument() String
        +getWord(int i) String
    }

    class ChannelMap {
        -int SEA_LANE_CHANCE$
        -int HIGH_SEAS_CHANCE$
        -HashMap~String, Location~ stops
        +ChannelMap()
        +find(String name) Location
        +getHome() Port
    }

    class Location {
        +String PORT$
        +String SEA_LANE$
        +String HIGH_SEAS$
        +int MAX_NEIGHBOURS$
        -String key
        -String name
        -String kind
        -int encounterPercent
        -String description
        -Location[] neighbours
        -int neighbourCount
        +Location(String key, String name, String kind, int encounterPercent, String description)
        +connect(Location other) void
        +isNextTo(Location other) boolean
        +neighbourList() String
        +describe() String
        +getKey() String
        +getName() String
        +getKind() String
        +getEncounterPercent() int
        +getDescription() String
    }

    class Port {
        +int REPAIR_PRICE$
        +int HIRE_PRICE$
        +int RUM_PRICE$
        +int UPGRADE_PRICE$
        +Port(String key, String name, String description)
        +rumPrice() int
        +upgradePrice(int nextLevel) int
        +describe() String
    }

    class Ship {
        <<abstract>>
        -String name
        -int hull
        -int maxHull
        -int cannons
        -int armour
        -int gold
        -int rum
        -Crew crew
        +Ship(String name, int maxHull, int cannons, int armour, Crew crew, int gold, int rum)
        +attackStrength() int
        +takeDamage(int raw) int
        +isDefeated() boolean
        +addGold(int amount) void
        +spendGold(int amount) void
        +addRum(int bottles) void
        +takeRum(int bottles) int
        ~setHull(int value) void
        ~setCannons(int value) void
        ~setArmour(int value) void
        +getName() String
        +getHull() int
        +getMaxHull() int
        +getCannons() int
        +getArmour() int
        +getGold() int
        +getRum() int
        +getCrew() Crew
        +describe()* String
    }

    class PlayerShip {
        +int MAX_LEVEL$
        -Location location
        -int notoriety
        -int portsVisited
        +PlayerShip(String name, Port home)
        +moveTo(Location destination) void
        -buy(int asked, int price, int room) int
        +repair(int points, int pricePerPoint) int
        +hire(int men, int pricePerMan) int
        +buyRum(int bottles, int pricePerBottle) int
        +upgradeCannons(int price) boolean
        +upgradeArmour(int price) boolean
        +payBonus(int gold) boolean
        +addNotoriety(int amount) void
        +getLocation() Location
        +getNotoriety() int
        +getPortsVisited() int
        +describe() String
    }

    class EnemyShip {
        -int notorietyGain
        -String description
        -EnemyShip(String name, String description, int baseHull, int baseCrew, int baseCannons, int baseArmour, int baseGold, int morale, int notorietyForWin, int notoriety)
        -check(int notoriety)$ int
        +merchant(int notoriety)$ EnemyShip
        +pirate(int notoriety)$ EnemyShip
        +coastGuard(int notoriety)$ EnemyShip
        +getNotorietyGain() int
        +describe() String
    }

    class Crew {
        +int MAX_COUNT$
        +int MAX_STAT$
        +int MORALE_PER_DRY_BOTTLE$
        +int MORALE_PER_MAN_LOST$
        +int WIN_MORALE$
        +int FLEE_MORALE$
        +int GOLD_PER_GREED$
        +int MEN_PER_BOTTLE$
        -int count
        -int morale
        -int greed
        +Crew(int count, int morale)
        +lose(int men) int
        +hire(int men) int
        +moraleFactor() double
        +drink(int bottlesAvailable) int
        +onWin(int plunder) void
        +onFlee() void
        +receiveBonus(int gold) void
        +mutinied() boolean
        +getCount() int
        +getMorale() int
        +getGreed() int
    }

    class Encounter {
        +int FLEE_DAMAGE$
        +int ROLL_RANGE$
        -PlayerShip player
        -EnemyShip enemy
        -Random random
        +Encounter(PlayerShip player, EnemyShip enemy, Random random)
        +roll(Location where, PlayerShip player, Random random)$ Encounter
        +fight() String
        +flee() String
        +getEnemy() EnemyShip
    }

    Game "1" *-- "1" CommandParser : each line
    CommandParser ..> Command : builds
    Game ..> Command : verb, argument
    Game "1" *-- "1" ChannelMap : sail targets
    Game "1" *-- "1" PlayerShip : player
    Game "1" o-- "0..1" Encounter : current fight
    Game ..> Port : prices
    Game ..> Crew : rum ration, mutiny check
    ChannelMap "1" *-- "18" Location : stops by key
    Location "1" --> "2..4" Location : neighbours
    Location <|-- Port
    Ship <|-- PlayerShip
    Ship <|-- EnemyShip
    Ship "1" *-- "1" Crew
    PlayerShip --> Location : current stop
    Encounter ..> Location : encounter chance
    Encounter --> PlayerShip : damage, plunder
    Encounter "1" *-- "1" EnemyShip : opponent
